# crawler

./: README.md  main.py  pyproject.toml  requirements.txt  test_debug.py
config/: digikey_config.py  redis_config.py  settings.py
core/: __init__.py  distributed_manager.py  master_node.py  task_scheduler.py  worker_node.py
downloader/: __init__.py  async_downloader.py  proxy_manager.py  rate_limiter.py  user_agent_rotator.py
middleware/: __init__.py  anti_blocking.py  cache_middleware.py  proxy_middleware.py  retry_middleware.py  validation_middleware.py
models/: __init__.py  page_model.py  product_model.py  stats_model.py  task_model.py
parser/: __init__.py  api_parser.py  base_parser.py  html_parser.py  json_parser.py
parser/sites/: __init__.py  digikey_parser.py  template_parser.py
storage/: __init__.py  base_storage.py  elastic_storage.py  file_storage.py  mongodb_storage.py  mysql_storage.py
utils/: __init__.py  bloom_filter.py  helpers.py  logger.py  metrics.py  url_manager.py
