[project]
name = "crawler"
version = "0.1.0"
description = "web crawling project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiomysql>=0.2.0",
    "bitarray>=3.7.1",
    "bs4>=0.0.2",
    "elasticsearch>=9.1.1",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.0",
    "pymongo>=4.15.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
